refactor: format and cleanup Dockerfiles
Signed-off-by: Gabor Boros <gabor.brs@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     env_file:
       - .env
     ports:
-      - 8000:8000
+      - '8000:8000'
     command: /app/scripts/start.sh
 
   celeryworker:
@@ -26,6 +26,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis
+      - questdb
     volumes:
       - .:/app
     env_file:
@@ -44,4 +45,3 @@ services:
     ports:
       - '9000:9000'
       - '8812:8812'
-
